--- a/src/components/OrderCard/OrderCard.module.css
+++ b/src/components/OrderCard/OrderCard.module.css
@@ -39,7 +39,7 @@
     transition: transform .5s ease;
 }
 
-.linkItem:hover {
+.linkItem:hover, .linkItem:focus-visible {
     transform: scale(1.1);
     cursor: pointer;
 }
