--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-  
-}
-
 * {
   box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.content {
+  max-width: 1280px;
+  margin: 0 auto;
+  text-align: center;
+
+  padding-bottom: 50px;
 }
