--- a/src/components/AdvertisementCard/AdvertisementCard.module.css
+++ b/src/components/AdvertisementCard/AdvertisementCard.module.css
@@ -1,12 +1,17 @@
 .adv {
     background-color: white;
     border-radius: 10px;
-    box-shadow: rgba(24, 19, 19, 0.5) 0 0 8px;
+    box-shadow: rgba(24, 19, 19, 0.2) 0 0 8px;
     display: flex;
     flex-direction: column;
     width: 300px;
     height: 500px;
     color: black;
+    transition: .2s ease-in-out;
+}
+
+.adv:hover {
+    box-shadow: rgba(24, 19, 19, 0.5) 0 0 8px;
 }
 
 
