--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -1,13 +1,15 @@
 .header {
-    background-color: rgb(233, 233, 233);
+    background-color: #fff;
     display: flex;
     box-shadow: 2px 0px 5px 0px rgba(0,0,0,0.75);
+    justify-content: center;
 }
 
 .menu {
     display: flex;
     gap: 20px;
-    margin-left: 20px;
+    width: 100%;
+    max-width: 1280px;
 }
 
 .link {
