--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -9,14 +9,14 @@
   .pageButton {
     padding: 10px 15px;
     border: 1px solid #ddd;
-    background-color: #29a7c1;
+    background-color: #fff;
     color: black;
     cursor: pointer;
     font-size: 16px;
     border-radius: 10px;
   }
   
-  .pageButton:hover {
+  .pageButton:hover, .pageButton:focus-visible {
     background-color: #f0f0f0;
   }
   
@@ -26,7 +26,5 @@
   }
   
   .active {
-    background-color: #007bff;
-    color: white;
-    border-color: #007bff;
+    box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
   }
