--- a/src/pages/AdvertisementsPage/AdvertisementsPage.module.css
+++ b/src/pages/AdvertisementsPage/AdvertisementsPage.module.css
@@ -1,9 +1,8 @@
 .container {
   padding-top: 20px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: flex-end;
-  margin: 0 20px;
 }
 
 .selectContainer {
