--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -12,12 +12,14 @@
     outline: none;
     box-shadow: 2px 0px 5px 0px rgba(0,0,0,0.2);
     cursor: pointer;
+    transition: box-shadow 0.5s ease;
 }
 
 .button:hover, .button:focus-visible {
-    box-shadow: 2px 0px 5px 0px rgba(0,0,0,0.7);
+    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.7);
 }
 
 .button:active {
     box-shadow: 2px 0px 2px 0px rgba(0,0,0,0.9);
+    transform: scale(0.9);
 }
