--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -18,6 +18,10 @@
     cursor: pointer;
 }
 
+.input:hover, input:focus-visible {
+    border: 1px solid black;
+}
+
 input[type='number'] {
     -webkit-appearance: none;
     -moz-appearance: textfield;
