--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -31,6 +31,7 @@
     border-radius: 5px;
     padding: 10px;
     margin-top: 5px;
+    z-index: 1;
 }
 
 .button {
@@ -41,3 +42,4 @@
 .filterActive {
     background-color: #c9f0f5;
 }
+
