--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -41,3 +41,9 @@
     color: rgb(15, 71, 156);
     text-decoration: none;
 }
+
+@media (max-width: 1299px) {
+    .menu {
+      padding: 0 1rem;
+    }
+  }
